Ajout de la bulle de discussion faite en CSS

--- a/2. HTML & CSS/turlututu.io/index.html
+++ b/2. HTML & CSS/turlututu.io/index.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-    <header class="[ paddingLarge bgBlack ]">
+    <header class="[ paddingLarge padSide bgBlack ]">
         <nav>
-            <ul class="[ menu ] [ displayFlex ]">
+            <ul class="[ displayFlex ]">
                 <li><a href="#">Turlutu.io</a></li>
                 <li><a href="#">Features</a></li>
                 <li><a href="#">Docs</a></li>
@@ -49,7 +49,7 @@
                 <h2>For awesome projects with deadlines</h2>
             </div>
 
-            <div class="[ padSide marginLarge ] [ arguments displayFlex justifyCenter alignCenter ]">
+            <div class="[ padSideL marginLarge ] [ arguments displayFlex justifyCenter alignCenter ]">
                 <div class="[ displayFlex flexColumn justifyEvenly ]">
                     <div>
                         <h2>> Simple to use</h2>
@@ -77,6 +77,9 @@
                             ReactJS (or your favorite framework) on turlututu.io Pages with server-side data-binding.
                         </p>
                     </div>
+                </div>
+                <div class="rondChat displayFlex justifyCenter alignCenter">
+                    <div class="chat"></div>
                 </div>
             </div>
 
@@ -106,6 +109,9 @@
                 </div>
             </div>
         </div>
+        <div class="rondChatF displayFlex justifyCenter alignCenter">
+            <div class="chatF"></div>
+        </div>
     </main>
 
     <footer class="[ bgBlack paddingLarge ]">
@@ -119,6 +125,7 @@
                 <li class="endItem">©2017 turlututu.io </li>
             </ul>
         </nav>
+
     </footer>
 </body>
 
