--- a/4. JavaScript/index.html
+++ b/4. JavaScript/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="functions.js"></script>
+    
     <script src="script.js"></script> 
+    <script src="functions.js"></script>
+    <script src="loops.js"></script>
 </body>
 </html>
