git end of function

--- a/4. JavaScript/index.html
+++ b/4. JavaScript/index.html
@@ -11,9 +11,10 @@
 <body>
 
     <script src="script.js"></script>
-    <script src="functions.js"></script>
+    <script src="conditions.js"></script>
     <script src="loops.js"></script>
     <script src="array.js"></script>
+    <script src="functions.js"></script>
 </body>
 
 </html>
