end of strings' exercises

--- a/4. JavaScript/index.html
+++ b/4. JavaScript/index.html
@@ -15,6 +15,7 @@
     <script src="loops.js"></script>
     <script src="array.js"></script>
     <script src="functions.js"></script>
+    <script src="strings.js"></script>
 </body>
 
 </html>
