--- a/3. JavaScript/Frontend/2. Selectors/index.html
+++ b/3. JavaScript/Frontend/2. Selectors/index.html
@@ -1,27 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alchemy for beginners</title>
-
-    CS
-    <link rel="stylesheet" href="style.css">
-
-    JS
-    <script src="script.js" defer></script>
-
-</head>
-<body id="body">
-    <h1 id="titre">Chapter 1 : Equipment</h1>
-    <p>This is what <em>alchemists' bottle</em> looks like :</p>
-    <img src="" alt="">
-</body>
-</html> -->
-
-<!-- ============================================================== -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -50,14 +26,14 @@
     <div>
       <p>This paragraph is inside a div and is followed by an important image<br /></p>
       <figure>
-        <img src="./assets/domtoretto.jpg" alt="Dominic Toretto" class="important" />
+        <img src="../assets/domtoretto.jpg" alt="Dominic Toretto" class="important" />
         <figcaption>Dominic Toretto, from Fast&Furious</figcaption>
       </figure>
     </div>
 
     <p>This is the last paragraph, it contains</p>
     <figure>
-      <img src="./assets/kitten.jpeg" alt="A kitten" />
+      <img src="../assets/kitten.jpeg" alt="A kitten" />
       <figcaption>A kitten, a baby cat</figcaption>
     </figure>
   </main>
