end of whack-a-mole

--- a/The hill/1. Frontend-sprint/index.html
+++ b/The hill/1. Frontend-sprint/index.html
@@ -29,6 +29,7 @@
 
         <section class="displayFlex flexColumn justifyCenter alignCenter">
             <h2>Whack-A-Mole</h2>
+            <button id="btnStart">Start</button>
             <div class="width75 displayFlex justifyCenter gap flexWrap">
                 <div class="1 cercle"></div>
                 <div class="2 cercle"></div>
