--- a/The hill/1. Frontend-sprint/1. Timeout & intervals/index.html
+++ b/The hill/1. Frontend-sprint/1. Timeout & intervals/index.html
@@ -31,18 +31,18 @@
             <h2>Whack-A-Mole</h2>
             <button id="btnStart">Start</button>
             <div class="width75 displayFlex justifyCenter gap flexWrap">
-                <div class="1 cercle"></div>
-                <div class="2 cercle"></div>
-                <div class="3 cercle"></div>
-                <div class="4 cercle"></div>
-                <div class="5 cercle"></div>
-                <div class="6 cercle"></div>
-                <div class="7 cercle"></div>
-                <div class="8 cercle"></div>
-                <div class="9 cercle"></div>
-                <div class="10 cercle"></div>
-                <div class="11 cercle"></div>
-                <div class="12 cercle"></div>
+                <div class="cercle"></div>
+                <div class="cercle"></div>
+                <div class="cercle"></div>
+                <div class="cercle"></div>
+                <div class="cercle"></div>
+                <div class="cercle"></div>
+                <div class="cercle"></div>
+                <div class="cercle"></div>
+                <div class="cercle"></div>
+                <div class="cercle"></div>
+                <div class="cercle"></div>
+                <div class="cercle"></div>
             </div>
             <div class="score displayFlex justifyCenter alignCenter textPrimary500 fs300">
                 <div id="score"></div>
