login and register ok, need to add token auth

--- a/The hill/2. Backend-sprint/4. MongoDB/src/index.html
+++ b/The hill/2. Backend-sprint/4. MongoDB/src/index.html
@@ -91,6 +91,14 @@
                     <input type="password" name="passwordSign" id="passwordSign"
                         placeholder="Enter your password address">
                 </div>
+                <div>
+                    <h3>First Name</h3>
+                    <input type="text" name="firstName" id="firstName" placeholder="Enter your first name">
+                </div>
+                <div>
+                    <h3>Last Name</h3>
+                    <input type="text" name="lastName" id="lastName" placeholder="Enter your last name">
+                </div>
                 <input type="submit" value="submit" class="btn" id="btnSign">
             </form>
         </section>
